--- a/portfolio_asset/css/stylesheet.css
+++ b/portfolio_asset/css/stylesheet.css
@@ -3336,3 +3336,17 @@ body, html {
   @media (max-width: 575.98px) {
     .hero-wrap .hero-bg{background-attachment: initial!important; background-position: center center !important;}
   }
+
+  @media (max-width: 400px){
+    .logo-main{
+      font-size: 16px!important;
+    }
+    .social-icons.social-icons-sm li{
+    margin: 0px 2px 2px;
+  }
+  .navbar-toggler{
+    width: 20px;
+    }
+  }
+
+
